--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,10 +1,10 @@
-font_family      CaskaydiaCove Nerd Font Mono
+font_family       JetBrains Mono Nerd Font 
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
-font_size 16
-window_padding_width 25
+font_size 15
+window_padding_width 10
 include themes/theme.conf
 #background_opacity 0.60
 #hide_window_decorations yes
