--- a/hypr/themes/Catppuccin-Mocha.conf
+++ b/hypr/themes/Catppuccin-Mocha.conf
@@ -5,6 +5,7 @@ exec = gsettings set org.gnome.desktop.interface cursor-size 20
 exec = kvantummanager --set Catppuccin-Mocha
 exec = gsettings set org.gnome.desktop.interface icon-theme 'Tela-circle-dracula'
 exec = gsettings set org.gnome.desktop.interface gtk-theme 'Catppuccin-Mocha'
+exec = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
 
 exec = gsettings set org.gnome.desktop.interface font-name 'Cantarell 10'
 exec = gsettings set org.gnome.desktop.interface document-font-name 'Cantarell 10'
@@ -22,7 +23,9 @@ general {
     col.active_border = rgba(ca9ee6ff) rgba(f2d5cfff) 45deg
     col.inactive_border = rgba(b4befecc) rgba(6c7086cc) 45deg
     layout = dwindle
+    resize_on_border = true
 }
+
 
 decoration {
     rounding = 10
