--- a/hypr/themes/Cyberpunk-Edge.conf
+++ b/hypr/themes/Cyberpunk-Edge.conf
@@ -2,9 +2,9 @@ exec = hyprctl setcursor Bibata-Modern-Ice 20
 exec = gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Modern-Ice'
 exec = gsettings set org.gnome.desktop.interface cursor-size 20
 
-exec = kvantummanager --set Decay-Green
-exec = gsettings set org.gnome.desktop.interface icon-theme 'Tela-circle-green'
-exec = gsettings set org.gnome.desktop.interface gtk-theme 'Decay-Green'
+exec = kvantummanager --set Cyberpunk-Edge
+exec = gsettings set org.gnome.desktop.interface icon-theme 'Tela-circle-yellow'
+exec = gsettings set org.gnome.desktop.interface gtk-theme 'Cyberpunk-Edge'
 exec = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
 
 exec = gsettings set org.gnome.desktop.interface font-name 'Cantarell 10'
@@ -17,27 +17,32 @@ env = XCURSOR_THEME,Bibata-Modern-Ice
 env = XCURSOR_SIZE,20
 
 general {
-    gaps_in = 3
-    gaps_out = 8
-    border_size = 2
-    col.active_border = rgba(90ceaaff) rgba(ecd3a0ff) 45deg
-    col.inactive_border = rgba(86aaeccc) rgba(93cee9cc) 45deg
+    gaps_in = 8
+    gaps_out = 15
+    border_size = 4
+    col.active_border = rgba(FADA16ff) rgba(4DBD4Fff) 45deg
+    col.inactive_border = rgba(5032ACff) rgba(1F5322ff) 45deg
     layout = dwindle
     resize_on_border = true
 }
 
 decoration {
-    rounding = 10
+    rounding = 0
     multisample_edges = true
-    drop_shadow = false
+    drop_shadow = true
+    shadow_ignore_window = true
+    shadow_offset = 12 12
+    shadow_range = 0
+    shadow_render_power = 4
+    col.shadow = 0xffFFA6C2
 
     blur {
         enabled = yes
-        size = 5
-        passes = 4
+        size = 6
+        passes = 3
         new_optimizations = on
         ignore_opacity = on
-        xray = true
+        xray = false
     }
 }
 
