--- a/.config/hypr/themes/Material-Sakura.conf
+++ b/.config/hypr/themes/Material-Sakura.conf
@@ -2,10 +2,10 @@ exec = hyprctl setcursor Bibata-Modern-Ice 20
 exec = gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Modern-Ice'
 exec = gsettings set org.gnome.desktop.interface cursor-size 20
 
-exec = kvantummanager --set Decay-Green
-exec = gsettings set org.gnome.desktop.interface icon-theme 'Tela-circle-green'
-exec = gsettings set org.gnome.desktop.interface gtk-theme 'Decay-Green'
-exec = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
+exec = kvantummanager --set Material-Sakura
+exec = gsettings set org.gnome.desktop.interface icon-theme 'Tela-circle-black'
+exec = gsettings set org.gnome.desktop.interface gtk-theme 'Material-Sakura'
+exec = gsettings set org.gnome.desktop.interface color-scheme 'prefer-light'
 
 exec = gsettings set org.gnome.desktop.interface font-name 'Cantarell 10'
 exec = gsettings set org.gnome.desktop.interface document-font-name 'Cantarell 10'
@@ -17,27 +17,32 @@ env = XCURSOR_THEME,Bibata-Modern-Ice
 env = XCURSOR_SIZE,20
 
 general {
-    gaps_in = 3
-    gaps_out = 8
-    border_size = 2
-    col.active_border = rgba(90ceaaff) rgba(ecd3a0ff) 45deg
-    col.inactive_border = rgba(86aaeccc) rgba(93cee9cc) 45deg
+    gaps_in = 8
+    gaps_out = 14
+    border_size = 4
+    col.active_border = rgba(b4637aff) rgba(d7827eff) 45deg
+    col.inactive_border = rgba(286983cc) rgba(56949fcc) 45deg
     layout = dwindle
     resize_on_border = true
 }
 
 decoration {
-    rounding = 10
+    rounding = 12
     multisample_edges = true
-    drop_shadow = false
+    drop_shadow = true
+    shadow_ignore_window = true
+    shadow_offset = 9 10
+    shadow_range = 5
+    shadow_render_power = 4
+    col.shadow = 0xff26233a
 
     blur {
         enabled = yes
-        size = 5
-        passes = 4
+        size = 6
+        passes = 3
         new_optimizations = on
         ignore_opacity = on
-        xray = true
+        xray = false
     }
 }
 
