--- a/.config/hypr/themes/Rose-Pine.conf
+++ b/.config/hypr/themes/Rose-Pine.conf
@@ -2,9 +2,9 @@ exec = hyprctl setcursor Bibata-Modern-Ice 20
 exec = gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Modern-Ice'
 exec = gsettings set org.gnome.desktop.interface cursor-size 20
 
-exec = kvantummanager --set Decay-Green
-exec = gsettings set org.gnome.desktop.interface icon-theme 'Tela-circle-green'
-exec = gsettings set org.gnome.desktop.interface gtk-theme 'Decay-Green'
+exec = kvantummanager --set Rose-Pine
+exec = gsettings set org.gnome.desktop.interface icon-theme 'Tela-circle-pink'
+exec = gsettings set org.gnome.desktop.interface gtk-theme 'Rose-Pine'
 exec = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
 
 exec = gsettings set org.gnome.desktop.interface font-name 'Cantarell 10'
@@ -20,8 +20,8 @@ general {
     gaps_in = 3
     gaps_out = 8
     border_size = 2
-    col.active_border = rgba(90ceaaff) rgba(ecd3a0ff) 45deg
-    col.inactive_border = rgba(86aaeccc) rgba(93cee9cc) 45deg
+    col.active_border = rgba(eb6f92ff) rgba(c4a7e7ff) 45deg
+    col.inactive_border = rgba(31748fcc) rgba(9ccfd8cc) 45deg
     layout = dwindle
     resize_on_border = true
 }
@@ -33,12 +33,12 @@ decoration {
 
     blur {
         enabled = yes
-        size = 5
-        passes = 4
+        size = 6
+        passes = 3
         new_optimizations = on
         ignore_opacity = on
-        xray = true
+        xray = false
     }
 }
 
-#blurls = waybar
+blurls = waybar
