--- a/.config/hypr/themes/Tokyo-Night.conf
+++ b/.config/hypr/themes/Tokyo-Night.conf
@@ -2,9 +2,9 @@ exec = hyprctl setcursor Bibata-Modern-Ice 20
 exec = gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Modern-Ice'
 exec = gsettings set org.gnome.desktop.interface cursor-size 20
 
-exec = kvantummanager --set Decay-Green
-exec = gsettings set org.gnome.desktop.interface icon-theme 'Tela-circle-green'
-exec = gsettings set org.gnome.desktop.interface gtk-theme 'Decay-Green'
+exec = kvantummanager --set Tokyo-Night
+exec = gsettings set org.gnome.desktop.interface icon-theme 'Tela-circle-purple'
+exec = gsettings set org.gnome.desktop.interface gtk-theme 'Tokyo-Night'
 exec = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
 
 exec = gsettings set org.gnome.desktop.interface font-name 'Cantarell 10'
@@ -20,8 +20,8 @@ general {
     gaps_in = 3
     gaps_out = 8
     border_size = 2
-    col.active_border = rgba(90ceaaff) rgba(ecd3a0ff) 45deg
-    col.inactive_border = rgba(86aaeccc) rgba(93cee9cc) 45deg
+    col.active_border = rgba(bb9af7ff) rgba(b4f9f8ff) 45deg
+    col.inactive_border = rgba(565f89cc) rgba(9aa5cecc) 45deg
     layout = dwindle
     resize_on_border = true
 }
@@ -33,12 +33,12 @@ decoration {
 
     blur {
         enabled = yes
-        size = 5
-        passes = 4
+        size = 6
+        passes = 3
         new_optimizations = on
         ignore_opacity = on
         xray = true
     }
 }
 
-#blurls = waybar
+blurls = waybar
