Updated hyprland config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -28,6 +28,8 @@ monitor = ,preferred,auto,auto
 
 exec-once = ~/.config/hypr/scripts/resetxdgportal.sh # reset XDPH for screenshare
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # for XDPH
+# exec-once= dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY
+exec-once = dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # for XDPH
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication dialogue for GUI apps
 exec-once = waybar # launch the system panel
@@ -36,10 +38,8 @@ exec-once = nm-applet --indicator # systray app for Network/Wifi
 exec-once = dunst # start notification demon
 exec-once = wl-paste --type text --watch cliphist store # clipboard store text data
 exec-once = wl-paste --type image --watch cliphist store # clipboard store image data
-exec-once = ~/.config/swww/swwwallpaper.sh # start wallpaper daemon
+exec-once = swww init # start wallpaper daemon
 #exec-once = swayidle -w timeout 900 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' # turn off monitor after 15 mins
-
-
 
 # █▀▀ █▄░█ █░█
 # ██▄ █░▀█ ▀▄▀
@@ -75,7 +75,7 @@ input {
         natural_scroll = yes 
     }
 
-    sensitivity = 1 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0.1 # -1.0 - 1.0, 0 means no modification.
     force_no_accel = 0
 }
 
@@ -136,8 +136,6 @@ source = ~/.config/hypr/animations.conf
 source = ~/.config/hypr/keybindings.conf
 source = ~/.config/hypr/windowrules.conf
 source = ~/.config/hypr/themes/theme.conf
-source = ~/.config/hypr/monitors.conf # initially empty, to be configured by user and remains static
-source = ~/.config/hypr/userprefs.conf # initially empty, to be configured by user and remains static
 
 # Note: as userprefs.conf is sourced at the end, settings configured in this file will override the defaults
 
