--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -11,19 +11,23 @@ $mainMod = SUPER # windows key
 # window/session actions
 bind = $mainMod, Q, exec, ~/.config/hypr/scripts/dontkillsteam.sh # killactive, # kill the window on focus
 bind = $mainMod, delete, exit, # kill hyperland session
-bind = $mainMod, W, togglefloating, # toggle the window on focus to float
+bind = $mainMod, X, togglefloating, # toggle the window on focus to float
+bind = $mainMod, W, exec,whatsie # toggle the window on focus to float
 bind = ALT, return, fullscreen, # toggle the window on focus to fullscreen
 bind = $mainMod, G, exec, ~/.config/hypr/scripts/gamemode.sh # disable hypr effects for gamemode
 bind = $mainMod, L, exec, swaylock # lock screen
 bind = $mainMod, backspace, exec, wlogout -b 2 -c 0 -r 0 -L 930 -R 930 -T 300 -B 300 --protocol layer-shell # logout menu
 bind = , mouse:274, exec, ;
 bind = $mainMod, D,exec ,wlogout
+bind = $mainMod, B,exec ,thorium-browser
+
+
 # application shortcuts
 bind = $mainMod, T, exec, kitty # open terminal
 bind = $mainMod, E, exec, dolphin # open file manager
 bind = $mainMod, V, exec, code # open vs code
 bind = $mainMod, F, exec, firefox # open browser
-bind = $mainMod,N,exec,neovide
+bind = $mainMod,N,exec,neovide-lunarvim
 
 # rofi is toggled on/off if you repeat the key presses
 bind = $mainMod, A, exec, pkill rofi || ~/.config/hypr/scripts/rofilaunch.sh d # launch desktop applications
@@ -59,7 +63,7 @@ bind = $mainMod_ALT, up, exec, ~/.config/waybar/wbarconfgen.sh n # next waybar m
 bind = $mainMod_ALT, down, exec, ~/.config/waybar/wbarconfgen.sh p # previous waybar mode
 bind = $mainMod_SHIFT, T, exec, ~/.config/hypr/scripts/themeselect.sh # theme select menu
 bind = $mainMod_SHIFT, A, exec, ~/.config/hypr/scripts/rofiselect.sh # rofi style select menu
-bind = $mainMod, M , exec,mailspring 
+bind = $mainMod, M , exec, geary 
 
 
 # Move focus with mainMod + arrow keys
