--- a/.config/hypr/themes/Catppuccin-Mocha.conf
+++ b/.config/hypr/themes/Catppuccin-Mocha.conf
@@ -15,7 +15,6 @@ exec = gsettings set org.gnome.desktop.interface font-hinting 'full'
 
 env = XCURSOR_THEME,Bibata-Modern-Ice
 env = XCURSOR_SIZE,20
-
 general {
     gaps_in = 3
     gaps_out = 8
@@ -26,9 +25,15 @@ general {
     resize_on_border = true
 }
 
+group {
+    col.border_active = rgba(ca9ee6ff) rgba(f2d5cfff) 45deg
+    col.border_inactive = rgba(b4befecc) rgba(6c7086cc) 45deg
+    col.border_locked_active = rgba(ca9ee6ff) rgba(f2d5cfff) 45deg
+    col.border_locked_inactive = rgba(b4befecc) rgba(6c7086cc) 45deg
+}
+
 decoration {
     rounding = 10
-    multisample_edges = true
     drop_shadow = false
 
     blur {
