--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -11,6 +11,8 @@
 
 
 windowrulev2 = opacity 0.80 0.80,class:^(firefox)$
+windowrulev2 = opacity 0.80 0.80,class:^(thorium-browser)$
+windowrulev2 = opacity 0.80 0.80,class:^(geary)$
 windowrulev2 = opacity 0.90 0.90,class:^(vivaldi-snapshot)$
 windowrulev2 = opacity 0.80 0.80,class:^(neovide)$
 windowrulev2 = opacity 0.80 0.80,class:^(Steam)$
