--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -19,14 +19,15 @@ bind = $mainMod, L, exec, swaylock # lock screen
 bind = $mainMod, backspace, exec, wlogout -b 2 -c 0 -r 0 -L 930 -R 930 -T 300 -B 300 --protocol layer-shell # logout menu
 bind = , mouse:274, exec, ;
 bind = $mainMod, D,exec ,wlogout
-bind = $mainMod, B,exec ,thorium-browser
+bind = $mainMod, B,exec ,vivaldi-snapshot
+bind = $mainMod, N,exec ,chromium
 
 
 # application shortcuts
 bind = $mainMod, T, exec, kitty # open terminal
 bind = $mainMod, E, exec, dolphin # open file manager
 bind = $mainMod, V, exec, code # open vs code
-bind = $mainMod, F, exec, firefox # open browser
+bind = $mainMod, F, exec, floorp # open browser
 bind = $mainMod,N,exec,neovide-lunarvim
 
 # rofi is toggled on/off if you repeat the key presses
@@ -63,7 +64,10 @@ bind = $mainMod_ALT, up, exec, ~/.config/waybar/wbarconfgen.sh n # next waybar m
 bind = $mainMod_ALT, down, exec, ~/.config/waybar/wbarconfgen.sh p # previous waybar mode
 bind = $mainMod_SHIFT, T, exec, ~/.config/hypr/scripts/themeselect.sh # theme select menu
 bind = $mainMod_SHIFT, A, exec, ~/.config/hypr/scripts/rofiselect.sh # rofi style select menu
-bind = $mainMod, M , exec, geary 
+bind = $mainMod, M , exec, mailspring --password-store="gnome-libsecret"
+# bind = $mainMod, M , exec, bluemail
+
+bind = $mainMod_SHIFT, P, exec, todoist
 
 
 # Move focus with mainMod + arrow keys
