--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,7 +16,7 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 
 # monitor = DP-1, 2560x1080@144, 0x0, 1
-monitor = ,preferred,auto,auto
+monitor = DP-1, 1920x1080@144, 1080x0 , 1, bitdepth,10
 
 
 
