--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -10,7 +10,7 @@
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
 
-windowrulev2 = opacity 0.80 0.80,class:^(firefox)$
+windowrulev2 = fakefullscreen,opacity 0.80 0.80,class:^(firefox)$
 windowrulev2 = opacity 0.80 0.80,class:^(thorium-browser)$
 windowrulev2 = opacity 0.80 0.80,class:^(geary)$
 windowrulev2 = opacity 0.90 0.90,class:^(vivaldi-snapshot)$
@@ -24,7 +24,7 @@ windowrulev2 = opacity 0.80 0.80,class:^(kitty)$
 windowrulev2 = opacity 0.80 0.80,class:^(org.kde.dolphin)$
 windowrulev2 = opacity 0.80 0.80,class:^(org.kde.ark)$
 windowrulev2 = opacity 0.80 0.80,class:^(nwg-look)$
-windowrulev2 = opacity 0.80 0.80,class:^(obsidian)$
+windowrulev2 = opacity 0.85 0.85,class:^(obsidian)$
 windowrulev2 = opacity 0.80 0.80,class:^(qt5ct)$
 
 windowrulev2 = opacity 0.90 0.90,class:^(com.github.rafostar.Clapper)$ #Clapper-Gtk
@@ -55,3 +55,7 @@ windowrulev2 = float,class:^(nm-applet)$
 windowrulev2 = float,class:^(nm-connection-editor)$
 windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
 
+windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
+windowrulev2 = noanim,class:^(xwaylandvideobridge)$
+windowrulev2 = nofocus,class:^(xwaylandvideobridge)$
+windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
