Updated hyprland config

--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -12,7 +12,7 @@ $mainMod = SUPER # windows key
 bind = $mainMod, Q, exec, ~/.config/hypr/scripts/dontkillsteam.sh # killactive, # kill the window on focus
 bind = $mainMod, delete, exit, # kill hyperland session
 bind = $mainMod, X, togglefloating, # toggle the window on focus to float
-bind = $mainMod, W, exec,whatsie # toggle the window on focus to float
+bind = $mainMod, W, exec,whatsdesk # toggle the window on focus to float
 bind = ALT, return, fullscreen, # toggle the window on focus to fullscreen
 bind = $mainMod, G, exec, ~/.config/hypr/scripts/gamemode.sh # disable hypr effects for gamemode
 bind = $mainMod, L, exec, swaylock # lock screen
@@ -21,11 +21,13 @@ bind = , mouse:274, exec, ;
 bind = $mainMod, D,exec ,wlogout
 bind = $mainMod, B,exec ,vivaldi-snapshot
 bind = $mainMod, N,exec ,chromium
+bind = $mainMod, H,exec ,wihotspot
 
 
 # application shortcuts
 bind = $mainMod, T, exec, kitty # open terminal
-bind = $mainMod, E, exec, dolphin # open file manager
+# bind = $mainMod, E, exec, dolphin --platformtheme qt5ct # open file manager
+bind = $mainMod, E, exec, thunar # open file manager
 bind = $mainMod, V, exec, code # open vs code
 bind = $mainMod, F, exec, floorp # open browser
 bind = $mainMod,N,exec,neovide-lunarvim
@@ -117,4 +119,5 @@ bind = $mainMod_ALT, left, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
-
+bindm = $mainMod, Z, movewindow
+bindm = $mainMod, X, resizewindow
