--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -22,6 +22,7 @@ windowrulev2 = opacity 0.80 0.80,class:^(Spotify)$
 windowrulev2 = opacity 0.70 0.70,class:^(Code)$
 windowrulev2 = opacity 0.80 0.80,class:^(kitty)$
 windowrulev2 = opacity 0.80 0.80,class:^(org.kde.dolphin)$
+windowrulev2 = opacity 0.80 0.80,class:^(thunar)$
 windowrulev2 = opacity 0.80 0.80,class:^(org.kde.ark)$
 windowrulev2 = opacity 0.80 0.80,class:^(nwg-look)$
 windowrulev2 = opacity 0.85 0.85,class:^(obsidian)$
