--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,11 +1,12 @@
-font_family       JetBrains Mono Nerd Font 
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
+font_family      JetBrains Mono Regular 
+bold_font        JetBrains Mono SemiBold
+italic_font      JetBrains Mono Italic
+bold_italic_font JetBrains Mono SemiBold Regular
 
-font_size 15
-window_padding_width 10
+font_size 14
+adjust_baseline 1
+window_margin_width 5
 include themes/theme.conf
 #background_opacity 0.60
-#hide_window_decorations yes
+hide_window_decorations yes
 #confirm_os_window_close 0
