Updated hyprland configs

--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -30,7 +30,7 @@ bind = $mainMod, T, exec, kitty # open terminal
 bind = $mainMod, E, exec, thunar # open file manager
 bind = $mainMod, V, exec, code # open vs code
 bind = $mainMod, F, exec, floorp # open browser
-bind = $mainMod,N,exec,neovide-lunarvim
+# bind = $mainMod,N,exec,neovide-lunarvim
 
 # rofi is toggled on/off if you repeat the key presses
 bind = $mainMod, A, exec, pkill rofi || ~/.config/hypr/scripts/rofilaunch.sh d # launch desktop applications
@@ -119,5 +119,15 @@ bind = $mainMod_ALT, left, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
-bindm = $mainMod, Z, movewindow
-bindm = $mainMod, X, resizewindow
+
+# Resize
+bind = ALT, LEFT, resizeactive, -100 0
+bind = ALT, RIGHT, resizeactive, 100 0
+bind = ALT, UP, resizeactive, 0 -100
+bind = ALT, DOWN, resizeactive, 0 100
+# Move
+# Move Focus Window
+bind = $mainMod SHIFT, UP, movewindow, u
+bind = $mainMod SHIFT, DOWN, movewindow, d
+bind = $mainMod SHIFT, LEFT, movewindow, l
+bind = $mainMod SHIFT , RIGHT, movewindow, r
