Updaterd hyprland config files

--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -27,6 +27,8 @@ windowrulev2 = opacity 0.80 0.80,class:^(org.kde.ark)$
 windowrulev2 = opacity 0.80 0.80,class:^(nwg-look)$
 windowrulev2 = opacity 0.85 0.85,class:^(obsidian)$
 windowrulev2 = opacity 0.80 0.80,class:^(qt5ct)$
+windowrulev2 = opacity 0.80 0.80,class:^(chromium)$
+windowrulev2 = opacity 0.80 0.80,class:^(evince)$
 
 windowrulev2 = opacity 0.90 0.90,class:^(com.github.rafostar.Clapper)$ #Clapper-Gtk
 windowrulev2 = opacity 0.80 0.80,class:^(com.github.tchx84.Flatseal)$ #Flatseal-Gtk
