--- a/.config/hypr/themes/Catppuccin-Mocha.conf
+++ b/.config/hypr/themes/Catppuccin-Mocha.conf
@@ -2,9 +2,9 @@ exec = hyprctl setcursor Bibata-Modern-Ice 20
 exec = gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Modern-Ice'
 exec = gsettings set org.gnome.desktop.interface cursor-size 20
 
-exec = kvantummanager --set Catppuccin-Mocha
+exec = kvantummanager --set Rose-Pine
 exec = gsettings set org.gnome.desktop.interface icon-theme 'Tela-circle-dracula'
-exec = gsettings set org.gnome.desktop.interface gtk-theme 'Catppuccin-Mocha'
+exec = gsettings set org.gnome.desktop.interface gtk-theme 'Rose-Pine'
 exec = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
 
 exec = gsettings set org.gnome.desktop.interface font-name 'Cantarell 10'
