--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -19,7 +19,7 @@ bind = $mainMod, L, exec, swaylock # lock screen
 bind = $mainMod, backspace, exec, wlogout -b 2 -c 0 -r 0 -L 930 -R 930 -T 300 -B 300 --protocol layer-shell # logout menu
 bind = , mouse:274, exec, ;
 bind = $mainMod, D,exec ,wlogout
-bind = $mainMod, B,exec ,vivaldi-snapshot
+bind = $mainMod, B,exec ,thorium-browser
 bind = $mainMod, N,exec ,chromium
 bind = $mainMod, H,exec ,wihotspot
 
@@ -29,7 +29,7 @@ bind = $mainMod, T, exec, kitty # open terminal
 # bind = $mainMod, E, exec, dolphin --platformtheme qt5ct # open file manager
 bind = $mainMod, E, exec, thunar # open file manager
 bind = $mainMod, V, exec, code # open vs code
-bind = $mainMod, F, exec, floorp # open browser
+bind = $mainMod, F, exec, firefox # open browser
 # bind = $mainMod,N,exec,neovide-lunarvim
 
 # rofi is toggled on/off if you repeat the key presses
