--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -10,8 +10,8 @@
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
 
-windowrulev2 = fakefullscreen,opacity 0.80 0.80,class:^(firefox)$
-windowrulev2 = opacity 0.80 0.80,class:^(thorium-browser)$
+windowrulev2 = opacity 0.85 0.85,class:^(firefox)$
+windowrulev2 = opacity 0.50 0.50,class:^(thorium-browser)$
 windowrulev2 = opacity 0.80 0.80,class:^(geary)$
 windowrulev2 = opacity 0.90 0.90,class:^(vivaldi-snapshot)$
 windowrulev2 = opacity 0.80 0.80,class:^(neovide)$
