Updated hyprland config

--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -12,7 +12,7 @@ $mainMod = SUPER # windows key
 bind = $mainMod, Q, exec, ~/.config/hypr/scripts/dontkillsteam.sh # killactive, # kill the window on focus
 bind = $mainMod, delete, exit, # kill hyperland session
 bind = $mainMod, X, togglefloating, # toggle the window on focus to float
-bind = $mainMod, W, exec,whatsdesk # toggle the window on focus to float
+bind = $mainMod, W, exec,whatsapp-for-linux # toggle the window on focus to float
 bind = ALT, return, fullscreen, # toggle the window on focus to fullscreen
 bind = $mainMod, G, exec, ~/.config/hypr/scripts/gamemode.sh # disable hypr effects for gamemode
 bind = $mainMod, L, exec, swaylock # lock screen
@@ -20,7 +20,7 @@ bind = $mainMod, backspace, exec, wlogout -b 2 -c 0 -r 0 -L 930 -R 930 -T 300 -B
 bind = , mouse:274, exec, ;
 bind = $mainMod, D,exec ,wlogout
 # bind = $mainMod, B,exec ,thorium-browser
-bind = $mainMod, N,exec ,chromium
+bind = $mainMod, N,exec ,chromium --ozone-platform-hint=auto
 bind = $mainMod, H,exec ,wihotspot
 
 
