Updated Hyprland config

--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -10,6 +10,7 @@ $mainMod = SUPER # windows key
 
 # window/session actions
 bind = $mainMod, Q, exec, ~/.config/hypr/scripts/dontkillsteam.sh # killactive, # kill the window on focus
+bind = $mainMod, O, exec, teams-for-linux --ozone-platform-hint=auto # killactive, # kill the window on focus
 bind = $mainMod, delete, exit, # kill hyperland session
 bind = $mainMod, X, togglefloating, # toggle the window on focus to float
 bind = $mainMod, W, exec,whatsapp-for-linux # toggle the window on focus to float
@@ -19,6 +20,7 @@ bind = $mainMod, L, exec, swaylock # lock screen
 bind = $mainMod, backspace, exec, wlogout -b 2 -c 0 -r 0 -L 930 -R 930 -T 300 -B 300 --protocol layer-shell # logout menu
 bind = , mouse:274, exec, ;
 bind = $mainMod, D,exec ,wlogout
+bind = $mainMod, U,exec ,OBSIDIAN_USE_WAYLAND=1 obsidian -enable-features=UseOzonePlatform -ozone-platform=wayland 
 # bind = $mainMod, B,exec ,thorium-browser
 bind = $mainMod, N,exec ,chromium --ozone-platform-hint=auto
 bind = $mainMod, H,exec ,wihotspot
@@ -28,7 +30,7 @@ bind = $mainMod, H,exec ,wihotspot
 bind = $mainMod, T, exec, kitty # open terminal
 # bind = $mainMod, E, exec, dolphin --platformtheme qt5ct # open file manager
 bind = $mainMod, E, exec, thunar # open file manager
-bind = $mainMod, V, exec, code # open vs code
+bind = $mainMod, V, exec, code --ozone-platform-hint=auto # open vs code
 bind = $mainMod, F, exec, firefox # open browser
 # bind = $mainMod,N,exec,neovide-lunarvim
 
