--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -33,7 +33,7 @@ env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 env = GDK_BACKEND,wayland
 env = QT_QPA_PLATFORM,wayland
-#env = QT_STYLE_OVERRIDE,kvantum
+env = QT_STYLE_OVERRIDE,kvantum
 env = QT_QPA_PLATFORMTHEME,qt5ct
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
@@ -84,11 +84,6 @@ dwindle {
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-
-master {
-    new_is_master = true
-}
-
 
 
 # █▀▄▀█ █ █▀ █▀▀
