--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -13,7 +13,7 @@ bind = $mainMod, Q, exec, ~/.config/hypr/scripts/dontkillsteam.sh # killactive, 
 bind = $mainMod, O, exec, teams-for-linux --ozone-platform-hint=auto # killactive, # kill the window on focus
 bind = $mainMod, delete, exit, # kill hyperland session
 bind = $mainMod, X, togglefloating, # toggle the window on focus to float
-bind = $mainMod, W, exec,whatsapp-for-linux # toggle the window on focus to float
+bind = $mainMod, W, exec, zapzap
 bind = ALT, return, fullscreen, # toggle the window on focus to fullscreen
 bind = $mainMod, G, exec, ~/.config/hypr/scripts/gamemode.sh # disable hypr effects for gamemode
 bind = $mainMod, L, exec, swaylock # lock screen
