--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -21,7 +21,7 @@ bind = $mainMod, backspace, exec, wlogout -b 2 -c 0 -r 0 -L 930 -R 930 -T 300 -B
 bind = , mouse:274, exec, ;
 bind = $mainMod, D,exec ,wlogout
 bind = $mainMod, U,exec ,OBSIDIAN_USE_WAYLAND=1 obsidian -enable-features=UseOzonePlatform -ozone-platform=wayland 
-# bind = $mainMod, B,exec ,thorium-browser
+bind = $mainMod, B,exec ,thorium-browser --ozone-platform-hint=auto
 bind = $mainMod, N,exec ,chromium --ozone-platform-hint=auto
 bind = $mainMod, H,exec ,wihotspot
 
