Updated hyprland config

--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -20,22 +20,24 @@ bind = $mainMod, L, exec, swaylock # lock screen
 bind = $mainMod, backspace, exec, wlogout -b 2 -c 0 -r 0 -L 930 -R 930 -T 300 -B 300 --protocol layer-shell # logout menu
 bind = , mouse:274, exec, ;
 bind = $mainMod, D,exec ,wlogout
-bind = $mainMod, U,exec ,OBSIDIAN_USE_WAYLAND=1 obsidian -enable-features=UseOzonePlatform -ozone-platform=wayland 
+bind = $mainMod, U,exec ,obsidian
 bind = $mainMod, B,exec ,thorium-browser --ozone-platform-hint=auto
 bind = $mainMod, N,exec ,chromium --ozone-platform-hint=auto
 bind = $mainMod, H,exec ,wihotspot
-
-
+bind = $mainMod, S,exec ,neovide --neovim-bin ~/.local/bin/lvim --no-multigrid --maximized --frame none
+bind = $mainMod, Z,exec ,wlsunset -T 4500
+bind = $mainMod_ALT, Z,exec ,pkill wlsunset
+# bind = $mainMod, Space,exec ,ulauncher
 # application shortcuts
 bind = $mainMod, T, exec, kitty # open terminal
 # bind = $mainMod, E, exec, dolphin --platformtheme qt5ct # open file manager
 bind = $mainMod, E, exec, thunar # open file manager
 bind = $mainMod, V, exec, code --ozone-platform-hint=auto # open vs code
-bind = $mainMod, F, exec, firefox # open browser
+bind = $mainMod, F, exec, firefox
 # bind = $mainMod,N,exec,neovide-lunarvim
 
 # rofi is toggled on/off if you repeat the key presses
-bind = $mainMod, A, exec, pkill rofi || ~/.config/hypr/scripts/rofilaunch.sh d # launch desktop applications
+bind = $mainMod, A, exec, ulauncher-toggle # open ulauncher
 bind = $mainMod, tab, exec, pkill rofi || ~/.config/hypr/scripts/rofilaunch.sh w # switch between desktop applications
 bind = $mainMod, R, exec, pkill rofi || ~/.config/hypr/scripts/rofilaunch.sh f # browse system files
 
