--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -3,19 +3,20 @@ windowrulev2 = opacity 0.85 0.85,class:^(mailspring)$
 windowrulev2 = opacity 0.50 0.50,class:^(thorium-browser)$
 windowrulev2 = opacity 0.90 0.90,class:^(vivaldi-snapshot)$
 windowrulev2 = opacity 0.80 0.80,class:^(neovide)$
+windowrulev2 = opacity 0.80 0.80,class:^(nautilus)$
 windowrulev2 = opacity 0.80 0.80,class:^(Steam)$
 windowrulev2 = opacity 0.80 0.80,class:^(steam)$
+windowrulev2 = opacity 0.80 0.80,class:^(zed)$
 windowrulev2 = opacity 0.80 0.80,class:^(steamwebhelper)$
-windowrulev2 = opacity 0.80 0.80,class:^(Spotify)$
+windowrulev2 = opacity 0.80 0.80,class:^(spotify)$
 windowrulev2 = opacity 0.70 0.70,class:^(Code)$
-windowrulev2 = opacity 0.90 0.90,class:^(kitty)$
+windowrulev2 = opacity 0.85 0.85,class:^(kitty)$
 windowrulev2 = opacity 0.80 0.80,class:^(org.kde.dolphin)$
-windowrulev2 = opacity 0.80 0.80,class:^(thunar)$
+windowrulev2 = opacity 0.90 0.90,class:^(thunar)$
 windowrulev2 = opacity 0.80 0.80,class:^(org.kde.ark)$
 windowrulev2 = opacity 0.80 0.80,class:^(nwg-look)$
 windowrulev2 = opacity 0.85 0.85,class:^(obsidian)$
 windowrulev2 = opacity 0.80 0.80,class:^(qt5ct)$
-windowrulev2 = opacity 0.80 0.80,class:^(chromium)$
 windowrulev2 = opacity 0.90 0.90,class:^(thorium-browser)$
 
 windowrulev2 = opacity 0.90 0.90,class:^(com.github.rafostar.Clapper)$ #Clapper-Gtk
