--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -22,7 +22,7 @@ exec-once = wl-paste --type text --watch cliphist store # clipboard store text d
 exec-once = wl-paste --type image --watch cliphist store # clipboard store image data
 exec-once = swww init # start wallpaper daemon
 #exec-once = swayidle -w timeout 900 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' # turn off monitor after 15 mins
-
+exec-once = ulauncher # start ulauncher
 # █▀▀ █▄░█ █░█
 # ██▄ █░▀█ ▀▄▀
 
@@ -37,7 +37,7 @@ env = QT_STYLE_OVERRIDE,kvantum
 env = QT_QPA_PLATFORMTHEME,qt6ct
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
-
+# env = GTK_THEME,Rose-Pine
 
 # █ █▄░█ █▀█ █░█ ▀█▀
 # █ █░▀█ █▀▀ █▄█ ░█░
@@ -53,7 +53,7 @@ input {
     follow_mouse = 1
 
     touchpad {
-        natural_scroll = yes 
+        natural_scroll = yes
     }
 
     sensitivity = 0.1 # -1.0 - 1.0, 0 means no modification.
